--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>NEWS</h2>
         <!-- 📄📍📇🎤🚩📹 -->
         <ul>
-          <li>🏅 <small>[Nov 2024]</small>Honored to receive the Foley Scholar award (highest award for student excellence in research contributions to computing at Georgia Tech)</li>
+          <li>🏅 <small>[Nov 2024]</small>Honored to receive the Foley Scholar award (the highest award for PhD student research contributions to computing at Georgia Tech)</li>
           <li>📄 <small>[May 2024]</small> Our paper "A Community-Centric Perspective for Characterizing and Detecting Anti-Asian Violence-Provoking Speech" is accepted to ACL</li>
           <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received Honorable Mention!</li>
 <!--           <li>🚩 <small>[Apr 2022]</small> I passed my PhD qualifier!!</li>
@@ -115,16 +115,17 @@
             Large language models have abilities in creating high-volume human-like texts and can be used to generate persuasive misinformation. However, the risks remain under-explored. To address the gap, this work first examined characteristics of AI-generated misinformation (AI-misinfo) compared with human creations, and then evaluated the applicability of existing solutions. We compiled human-created COVID-19 misinformation and abstracted it into narrative prompts for a language model to output AI-misinfo. We found significant linguistic differences within human-AI pairs, and patterns of AI-misinfo in enhancing details, communicating uncertainties, drawing conclusions, and simulating personal tones. While existing models remained capable of classifying AI-misinfo, a significant performance drop compared to   human-misinfo was observed. Results suggested that existing information assessment guidelines had questionable applicability, as AI-misinfo tended to meet criteria in evidence credibility, source transparency, and limitation acknowledgment. We discuss implications for practitioners, researchers, and journalists, as AI can create new challenges to the societal problem of misinformation.
           </div><br>
           🏅<strong class="award">Best Paper Honorable Mention</strong><br>
-          🎤 Invited talk @<a target="_blank" rel="noopener noreferrer" href="https://alumni.csiro.au/events/synthetic-lies-misinformation-in-the-age-of-large-language-models/">CSIRO Human Centric AI Seminars</a>, Amazon AWS Responsible AI Science Meeting<br>
-          📝 Covered by UK government’s <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/cma-cases/ai-foundation-models-initial-review">AI Foundation Models Initial Review</a>, CNET, Georgia Tech College of Computing Press
+          🎤 <i>Invited talk @<a target="_blank" rel="noopener noreferrer" href="https://alumni.csiro.au/events/synthetic-lies-misinformation-in-the-age-of-large-language-models/">CSIRO Human Centric AI Seminars</a>, Amazon AWS Responsible AI Science Meeting</i><br>
+          📝 <i>Covered by UK government’s <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/cma-cases/ai-foundation-models-initial-review">AI Foundation Models Initial Review</a>, CNET, Georgia Tech College of Computing Press</i>
         </p>
+        <!-- <br> -->
 
         <p class="pub">
           <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
           <strong>Jiawei Zhou</strong>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.<br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/misinformative_hate.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/cscw25_misinformative_hate.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3710990">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
@@ -383,7 +384,7 @@
           <strong>Jiawei Zhou</strong>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.<br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/misinformative_hate.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/cscw25_misinformative_hate.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3710990">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
@@ -429,6 +430,7 @@
                 }
             </div>
           </div>
+          </p>
 
           <p class="pub">
           <small class="venue">CSCW'24</small> <strong class="project">Using Sensor-Captured Patient-Generated Data to Support Clinical Decision-making in PTSD Therapy</strong><br>
