typos and preprints

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="box">
           <h1>Jiawei Zhou <font-medium1>周嘉玮</font-medium1></h1>
-          <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
+          <p>Ph.D. Candidate<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
 
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png">Twitter</a><br>
@@ -38,7 +38,7 @@
       <section>
         <h2>ABOUT ME</h2>
 
-        <p>I am a PhD candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in the information ecosystem and high-stakes health domain.</b> I adopt a theory-guided approach using both quantitative and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
+        <p>I am a PhD candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in information ecosystems and high-stakes health domains.</b> I adopt a theory-guided approach using both quantitative and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
 
         <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content — such as inaccurate or biased information — with high scalability and persuasiveness. I adopt a human-centered approach to understanding and contextualizing the perceived harms of using AI to meet informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
@@ -77,8 +77,9 @@
         <p class="pub">
           <strong class="project">A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health</strong><br>
           <b>Jiawei Zhou</b>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
+          <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025).</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> Preprint Soon]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a>      
           </div>
           🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25) Workshop on AI Applications in Public Health and Social Services</a>, American Public Health Association (APHA) Annual Meeting 2025</i><br>
@@ -164,10 +165,10 @@
 
         <p class="pub">
           <small class="venue">CSCW'25</small> <strong class="project">A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health</strong><br>
-          <strong>Jiawei Zhou</strong>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
+          <b>Jiawei Zhou</b>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
           <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025).</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> Preprint Soon]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
@@ -194,7 +195,7 @@
           Gaurav Verma, <b>Jiawei Zhou</b>, Mohit Chandra, Srijan Kumar, Munmun De Choudhury<br>
           <i>Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society 2025.</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> Preprint Soon]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/pdf/2504.02793">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
             <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
