--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="icon" href="assets/icon/weblogo.png">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/path/to/folder/css/academicons.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"> -->
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -25,11 +28,19 @@
           <h1>Jiawei Zhou <font-medium1>周嘉玮</font-medium1></h1>
           <p>Ph.D. Candidate<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
 
-          <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png">Twitter</a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/jiawei-z.bsky.social"><img class="contact" src="assets/icon/bluesky.png">Bluesky</a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png">Google Scholar</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><img class="contact" src="assets/icon/cv.png">CV</a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><img class="contact" src="assets/icon/cv.png">CV</a> -->
+
+          <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><i class="fa-solid fa-envelope" style="font-size:1.3rem"></i></a>
+          <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><i class="fa-brands fa-twitter" style="font-size:1.3rem"></i></a>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/jiawei-z.bsky.social"><img class="contact" src="assets/icon/bluesky.png"></a> -->
+          <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/zhou-jiawei/"><i class="fa-brands fa-linkedin" style="font-size:1.3rem"></i></a>
+          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:1.3rem"></i></a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><i class="ai ai-cv" style="font-size:1.3rem"></i></a>
+
         </div>
         <!-- <a target="_blank" rel="noopener noreferrer" href="https://hci.social/@jiawei"><img class="contact" src="assets/icon/mastodon.png"><strong>Mastodon</strong></a><br> -->
         <br>
@@ -53,12 +64,12 @@
         <h2>RECENT NEWS</h2>
         <!-- 📄📍📇🎤🚩📹✈️ -->
         <ul>
-          <li>✈️ <small>[Nov 2025]</small> Presenting work @ APHA Annual Meeting in DC</li>
-          <li>✈️ <small>[Oct 2025]</small> Presenting work @ CSCW in Norway</li>
+          <li>✈️ <small>[Nov 2025]</small> Invited speaker @ APHA Annual Meeting in DC</li>
+          <li>✈️ <small>[Oct 2025]</small> Presenting 2 papers @ CSCW in Norway</li>
           <li>🚩 <small>[July 2025]</small> I passed my thesis proposal! Now I'm a PhD candidate:)</li>
           <li>📄 <small>[July 2025]</small> Two paper accepts! 1) "A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health" is accepted to CSCW'25, and 2) "A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models" is accepted to AIES'25</li>
-          <li>🎤 <small>[June 2025]</small> Gave a talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25)</a></li>
-          <li>🎤 <small>[April 2025]</small> Gave a talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series</a></li>
+          <li>🎤 <small>[June 2025]</small> Talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25)</a></li>
+          <li>🎤 <small>[April 2025]</small> Talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series</a></li>
           <li>📄 <small>[Dec 2024]</small> Our work "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" is accepted to CSCW'25</li>
           <li>🏅 <small>[Nov 2024]</small> Honored to receive the <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/foley-endowment">Foley Scholar Award</a> (the highest award for PhD student research contributions to computing at Georgia Tech)!</li>
           <li>✈️ <small>[Nov 2024]</small> Attended CSCW in Costa Rica</li>
@@ -75,12 +86,29 @@
 
 
         <p class="pub">
-          <strong class="project">A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health</strong><br>
+          <strong class="project">A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health</strong><br>
           <b>Jiawei Zhou</b>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
-          <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025).</i><br>
+          <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025), 32 pages.</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
-            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a>      
+            <a target="_blank" rel="noopener noreferrer" href="assets/cscw25_llm_public_health.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
+            <div class="bibcontent">
+              @article{zhou2025risk,<br>
+                author = {Zhou, Jiawei and Chen, Amy Z. and Shah, Darshi and Schwab-Reese, Laura M. and De Choudhury, Munmun},<br>
+                title = {A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health},<br>
+                year = {2025},<br>
+                month = {nov},<br>
+                publisher = {Association for Computing Machinery},<br>
+                address = {New York, NY, USA},<br>
+                volume = {9},<br>
+                number = {7},<br>
+                url = {https://doi.org/10.1145/3757544},<br>
+                journal = {Proc. ACM Hum.-Comput. Interact.},<br>
+                articleno = {363},<br>
+                numpages = {32}<br>
+                }
+            </div>      
           </div>
           🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25) Workshop on AI Applications in Public Health and Social Services</a>, American Public Health Association (APHA) Annual Meeting 2025</i><br>
           <img src="assets/img/llm_health.png" style="width:85%">
@@ -159,22 +187,26 @@
         </p>
 
 
-        <br>
+
+        <br><br><br>
+
+
+
 
         <h2>PUBLICATIONS</h2>
 
         <p class="pub">
-          <small class="venue">CSCW'25</small> <strong class="project">A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health</strong><br>
-          <b>Jiawei Zhou</b>, Amy Z. Chen, Darshi Shah, Laura Schwab Reese, Munmun De Choudhury<br>
-          <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025).</i><br>
+          <small class="venue">CSCW'25</small> <strong class="project">A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health</strong><br>
+          <b>Jiawei Zhou</b>, Amy Z. Chen, Darshi Shah, Laura M. Schwab Reese, Munmun De Choudhury<br>
+          <i>Proc. ACM Hum.-Comput. Interact. 9, 7, Article CSCW363 (November 2025), 32 pages.</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/llm_for_health.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
-            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/cscw25_llm_health.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3757544">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
               @article{zhou2025risk,<br>
-                author = {Zhou, Jiawei and Chen, Amy Z. and Shah, Darshi and Schwab Reese, Laura and De Choudhury, Munmun},<br>
-                title = {A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health},<br>
+                author = {Zhou, Jiawei and Chen, Amy Z. and Shah, Darshi and Schwab-Reese, Laura M. and De Choudhury, Munmun},<br>
+                title = {A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health},<br>
                 year = {2025},<br>
                 month = {nov},<br>
                 publisher = {Association for Computing Machinery},<br>
@@ -183,8 +215,8 @@
                 number = {7},<br>
                 url = {https://doi.org/10.1145/3757544},<br>
                 journal = {Proc. ACM Hum.-Comput. Interact.},<br>
-                articleno = {363}<br>
-                <!-- numpages = {22}<br> -->
+                articleno = {363},<br>
+                numpages = {32}<br>
                 }
             </div>
           </div>
@@ -195,22 +227,18 @@
           Gaurav Verma, <b>Jiawei Zhou</b>, Mohit Chandra, Srijan Kumar, Munmun De Choudhury<br>
           <i>Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society 2025.</i><br>
           <div>
-            <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/pdf/2504.02793">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
-            <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" rel="noopener noreferrer" href="assets/aies25_ai_vertical_systems.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
-                @inproceedings{verma24violence,<br>
-                title={A Community-Centric Perspective for Characterizing and Detecting Anti-Asian Violence-Provoking Speech},<br>
-                author={Verma, Gaurav and Grover, Rynaa and Zhou, Jiawei and Mathew, Binny and Kraemer, Jordan and Choudhury, Munmun and Kumar, Srijan},<br>
-                booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",<br>
-                month = aug,<br>
-                year = "2024",<br>
-                address = "Bangkok, Thailand",<br>
-                publisher = "Association for Computational Linguistics",<br>
-                url = "https://aclanthology.org/2024.acl-long.684",<br>
-                pages = "12672--12684"<br>
+                @inproceedings{verma25vertical,<br>
+                title={A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models},<br>
+                author={Verma, Gaurav and Zhou, Jiawei and Chandra, Mohit and Kumar, Srijan and De Choudhury, Munmun},<br>
+                booktitle={Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society},<br>
+                month = oct,<br>
+                year = "2025"<br>
                 }
-            </div> -->
+            </div>
           </div>
           </p>
 
@@ -443,9 +471,7 @@
 
        
 
-        <br><br>
-
-        <br><br><br>            
+        <br><br><br><br><br>            
 
         <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
 
