--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@
 
         <h2>RECENT NEWS</h2>
         <!-- 📄📍📇🎤🚩📹✈️ -->
-        <ul>
+        <ul class="scrollable-section">
           <li>✈️ <small>[Nov 2025]</small> Invited speaker @ APHA Annual Meeting in DC</li>
-          <li>✈️ <small>[Oct 2025]</small> Presenting 2 papers @ CSCW in Norway</li>
+          <li>✈️ <small>[Oct 2025]</small> Presenting 2 papers & attending workshop @ CSCW in Norway</li>
+          <li>🏅 <small>[Oct 2025]</small> Our paper "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" received Best Paper & DEI Recognition!</li>
           <li>🚩 <small>[July 2025]</small> I passed my thesis proposal! Now I'm a PhD candidate:)</li>
           <li>📄 <small>[July 2025]</small> Two paper accepts! 1) "A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health" is accepted to CSCW'25, and 2) "A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models" is accepted to AIES'25</li>
-          <li>🎤 <small>[June 2025]</small> Talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25)</a></li>
-          <li>🎤 <small>[April 2025]</small> Talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series</a></li>
+          <li>🎤 <small>[June 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">Conference on AI in Medicine (AIME'25)</a></li>
+          <li>🎤 <small>[April 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series</a></li>
           <li>📄 <small>[Dec 2024]</small> Our work "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" is accepted to CSCW'25</li>
           <li>🏅 <small>[Nov 2024]</small> Honored to receive the <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/foley-endowment">Foley Scholar Award</a> (the highest award for PhD student research contributions to computing at Georgia Tech)!</li>
-          <li>✈️ <small>[Nov 2024]</small> Attended CSCW in Costa Rica</li>
+          <!-- <li>✈️ <small>[Nov 2024]</small> Attended CSCW in Costa Rica</li> -->
           <li>📄 <small>[May 2024]</small> Our work "A Community-Centric Perspective for Characterizing and Detecting Anti-Asian Violence-Provoking Speech" is accepted to ACL</li>
-          <!-- <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received Honorable Mention!</li> -->
+          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received Honorable Mention at CHI!</li>
           <!-- <li>📄 <small>[Dec 2021]</small> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" is accepted to CSCW</li> --> 
           <!-- <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li> -->
           <!-- <li>📇 <small>[May 2021]</small> Starting my summer research internship at Mayo Clinic Department of AI and Informatics</li> -->
@@ -84,6 +85,39 @@
 
         <h2>HIGHLIGHTED WORK</h2>
 
+        <p class="pub">
+          <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
+          🏅<strong class="award">Best Paper Honorable Mention</strong><br>
+          <b>Jiawei Zhou</b>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
+          <i>Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (pp. 1-20).</i><br>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
+            <div class="bibcontent">
+                @inproceedings{zhou2023synthetic,<br>
+                title={Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions},<br>
+                author={Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},<br>
+                booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},<br>
+                pages={1--20},<br>
+                year={2023},<br>
+                isbn = {9781450394215},<br>
+                publisher = {Association for Computing Machinery},<br>
+                address = {New York, NY, USA},<br>
+                url = {https://doi.org/10.1145/3544548.3581318},<br>
+                doi = {10.1145/3544548.3581318},<br>
+                series = {CHI '23}<br>
+                }
+            </div>
+          </div>
+          🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://alumni.csiro.au/events/synthetic-lies-misinformation-in-the-age-of-large-language-models/">Australian National Science Agency CSIRO Human Centric AI Seminars</a>, Amazon AWS Responsible AI Science</i><br>
+          📝 <i>Covered by <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/cma-cases/ai-foundation-models-initial-review">UK government’s AI Foundation Models Initial Review</a>, <a target="_blank" rel="noopener noreferrer" href="https://www.cnet.com/news/misinformation/ai-misinformation-how-it-works-and-ways-to-spot-it/">CNET</a>, National Business Daily, <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/news/chi-2023-misinformation-detection-models-are-vulnerable-chatgpt-and-other-llms">Georgia Tech College of Computing Press</a></i>
+          <img src="assets/img/ai-misinfo.png">
+          <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
+          <div class="abstract">
+            Large language models have abilities in creating high-volume human-like texts and can be used to generate persuasive misinformation. However, the risks remain under-explored. To address the gap, this work first examined characteristics of AI-generated misinformation (AI-misinfo) compared with human creations, and then evaluated the applicability of existing solutions. We compiled human-created COVID-19 misinformation and abstracted it into narrative prompts for a language model to output AI-misinfo. We found significant linguistic differences within human-AI pairs, and patterns of AI-misinfo in enhancing details, communicating uncertainties, drawing conclusions, and simulating personal tones. While existing models remained capable of classifying AI-misinfo, a significant performance drop compared to   human-misinfo was observed. Results suggested that existing information assessment guidelines had questionable applicability, as AI-misinfo tended to meet criteria in evidence credibility, source transparency, and limitation acknowledgment. We discuss implications for practitioners, researchers, and journalists, as AI can create new challenges to the societal problem of misinformation.
+          </div><br>
+        </p>
 
         <p class="pub">
           <strong class="project">A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health</strong><br>
@@ -120,42 +154,8 @@
         </p>
 
         <p class="pub">
-          <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
-          <b>Jiawei Zhou</b>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
-          <i>Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (pp. 1-20).</i><br>
-          <div>
-            <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a>
-            <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
-            <div class="bibcontent">
-                @inproceedings{zhou2023synthetic,<br>
-                title={Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions},<br>
-                author={Zhou, Jiawei and Zhang, Yixuan and Luo, Qianni and Parker, Andrea G and De Choudhury, Munmun},<br>
-                booktitle={Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},<br>
-                pages={1--20},<br>
-                year={2023},<br>
-                isbn = {9781450394215},<br>
-                publisher = {Association for Computing Machinery},<br>
-                address = {New York, NY, USA},<br>
-                url = {https://doi.org/10.1145/3544548.3581318},<br>
-                doi = {10.1145/3544548.3581318},<br>
-                series = {CHI '23}<br>
-                }
-            </div>
-          </div>
-          🏅<strong class="award">Best Paper Honorable Mention</strong><br>
-          🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://alumni.csiro.au/events/synthetic-lies-misinformation-in-the-age-of-large-language-models/">Australian National Science Agency CSIRO Human Centric AI Seminars</a>, Amazon AWS Responsible AI Science</i><br>
-          📝 <i>Covered by <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/cma-cases/ai-foundation-models-initial-review">UK government’s AI Foundation Models Initial Review</a>, <a target="_blank" rel="noopener noreferrer" href="https://www.cnet.com/news/misinformation/ai-misinformation-how-it-works-and-ways-to-spot-it/">CNET</a>, National Business Daily, <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/news/chi-2023-misinformation-detection-models-are-vulnerable-chatgpt-and-other-llms">Georgia Tech College of Computing Press</a></i>
-          <img src="assets/img/ai-misinfo.png">
-          <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
-          <div class="abstract">
-            Large language models have abilities in creating high-volume human-like texts and can be used to generate persuasive misinformation. However, the risks remain under-explored. To address the gap, this work first examined characteristics of AI-generated misinformation (AI-misinfo) compared with human creations, and then evaluated the applicability of existing solutions. We compiled human-created COVID-19 misinformation and abstracted it into narrative prompts for a language model to output AI-misinfo. We found significant linguistic differences within human-AI pairs, and patterns of AI-misinfo in enhancing details, communicating uncertainties, drawing conclusions, and simulating personal tones. While existing models remained capable of classifying AI-misinfo, a significant performance drop compared to   human-misinfo was observed. Results suggested that existing information assessment guidelines had questionable applicability, as AI-misinfo tended to meet criteria in evidence credibility, source transparency, and limitation acknowledgment. We discuss implications for practitioners, researchers, and journalists, as AI can create new challenges to the societal problem of misinformation.
-          </div><br>
-        </p>
-        <!-- <br> -->
-
-        <p class="pub">
           <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
+          🏅<strong class="award">Best Paper & DEI Recognition</strong><br>
           <b>Jiawei Zhou</b>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           <i>Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.</i><br>
           <div>
@@ -229,6 +229,7 @@
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/aies25_ai_vertical_systems.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
+            <a target="_blank" rel="noopener noreferrer" href="https://gaurav22verma.github.io/vertical-systems-with-large-ai-models">[<i class="fa fa-window-maximize"></i> Webpage]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
                 @inproceedings{verma25vertical,<br>
@@ -245,6 +246,7 @@
 
         <p class="pub">
           <small class="venue">CSCW'25</small> <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
+          🏅<strong class="award">Best Paper & DEI Recognition</strong><br>
           <b>Jiawei Zhou</b>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           <i>Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.</i><br>
           <div>
@@ -327,8 +329,9 @@
 
           <p class="pub">
           <small class="venue">CHI'23</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong><br>
+          🏅<strong class="award">Best Paper Honorable Mention</strong><br>
           <b>Jiawei Zhou</b>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
-          <i>Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (pp. 1-20).</i>🏅<strong class="award">Best Paper Honorable Mention</strong><br>
+          <i>Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (pp. 1-20).</i><br>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1145/3544548.3581318">[<i class="fa fa-external-link-square"></i> DOI]</a>
