--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
           <h1>Jiawei Zhou <font-medium1>周嘉玮</font-medium1></h1>
           <p>Ph.D. Candidate<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
 
-          <!-- <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png">Twitter</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/jiawei-z.bsky.social"><img class="contact" src="assets/icon/bluesky.png">Bluesky</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png">Google Scholar</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><img class="contact" src="assets/icon/cv.png">CV</a> -->
-
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><i class="fa-solid fa-envelope" style="font-size:1.3rem"></i></a>
           <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><i class="fa-brands fa-twitter" style="font-size:1.3rem"></i></a>
           <!-- <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/jiawei-z.bsky.social"><img class="contact" src="assets/icon/bluesky.png"></a> -->
@@ -52,10 +46,10 @@
         <p>I am a PhD candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in information ecosystems and high-stakes health domains.</b> I adopt a theory-guided approach using both quantitative and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
 
-        <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content — such as inaccurate or biased information — with high scalability and persuasiveness. I adopt a human-centered approach to understanding and contextualizing the perceived harms of using AI to meet informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
+        <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content (such as inaccurate or biased information) with high scalability and persuasiveness. I adopt a human-centered approach to understanding and contextualizing the perceived harms of using AI to meet informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
 
 
-        <p>My research has been published at premier computing venues, such as CHI, CSCW, UbiComp, and ACL, and has been recognized by a Best Paper Honorable Mention at CHI and the Foley Scholar Award.</p>
+        <p>My research has been published at premier computing venues, such as CHI, CSCW, and ACL, and has been recognized by paper awards at CHI and CSCW and the Foley Scholar Award.</p>
 
 
         <br>
