--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <section>
         <h2>ABOUT ME</h2>
 
-        <p>I am a PhD candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in information ecosystems and high-stakes health domains.</b> I adopt a theory-guided approach using both quantitative and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
+        <p>I am a PhD Candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in information ecosystems and high-stakes health domains.</b> I adopt a theory-guided approach using both computational and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
 
         <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content (such as inaccurate or biased information) with high scalability and persuasiveness. I adopt a human-centered approach to understanding and contextualizing the perceived harms of using AI to meet informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
 
 
-        <p>My research has been published at premier computing venues, such as CHI, CSCW, and ACL, and has been recognized by paper awards at CHI and CSCW and the Foley Scholar Award.</p>
+        <p>My research has been published at premier computing venues, such as CHI, CSCW, and ACL, and has been recognized by paper awards at CHI and CSCW and the Foley Scholar Award (Georgia Tech highest award for study excellence in research contributions to computing).</p>
 
 
         <br>
@@ -58,18 +58,18 @@
         <h2>RECENT NEWS</h2>
         <!-- 📄📍📇🎤🚩📹✈️ -->
         <ul class="scrollable-section">
-          <li>✈️ <small>[Nov 2025]</small> Invited speaker @ APHA Annual Meeting in DC</li>
-          <li>✈️ <small>[Oct 2025]</small> Presenting 2 papers & attending workshop @ CSCW in Norway</li>
-          <li>🏅 <small>[Oct 2025]</small> Our paper "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" received Best Paper & DEI Recognition!</li>
+          <li>🎤 <small>[Nov 2025]</small> Invited panelist @ <a target="_blank" rel="noopener noreferrer" href="https://apha.confex.com/apha/2025/meetingapp.cgi/Session/75396">APHA Annual Meeting</a> in DC.</li>
+          <li>🎤 <small>[Oct 2025]</small> Presented 2 papers & 1 workshop work @ <a target="_blank" rel="noopener noreferrer" href="https://cscw.acm.org/2025/">CSCW</a> in Norway.</li>
+          <li>🏅 <small>[Oct 2025]</small> Our paper "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" received <a target="_blank" rel="noopener noreferrer" href="https://programs.sigchi.org/cscw/2025/program/content/213085">Best Paper & DEI Recognition</a>!</li>
           <li>🚩 <small>[July 2025]</small> I passed my thesis proposal! Now I'm a PhD candidate:)</li>
-          <li>📄 <small>[July 2025]</small> Two paper accepts! 1) "A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health" is accepted to CSCW'25, and 2) "A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models" is accepted to AIES'25</li>
-          <li>🎤 <small>[June 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">Conference on AI in Medicine (AIME'25)</a></li>
-          <li>🎤 <small>[April 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series</a></li>
-          <li>📄 <small>[Dec 2024]</small> Our work "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" is accepted to CSCW'25</li>
+          <li>📄 <small>[July 2025]</small> Two paper accepts! 1) "A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health" is accepted to CSCW'25, and 2) "A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models" is accepted to AIES'25.</li>
+          <li>🎤 <small>[June 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">Conference on AI in Medicine (AIME'25).</a></li>
+          <li>🎤 <small>[April 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/spring-2025-lunch-lectures">IPaT: GVU Lunch Lecture Series.</a></li>
+          <li>📄 <small>[Dec 2024]</small> Our work "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" is accepted to CSCW'25.</li>
           <li>🏅 <small>[Nov 2024]</small> Honored to receive the <a target="_blank" rel="noopener noreferrer" href="https://research.gatech.edu/ipat/foley-endowment">Foley Scholar Award</a> (the highest award for PhD student research contributions to computing at Georgia Tech)!</li>
           <!-- <li>✈️ <small>[Nov 2024]</small> Attended CSCW in Costa Rica</li> -->
-          <li>📄 <small>[May 2024]</small> Our work "A Community-Centric Perspective for Characterizing and Detecting Anti-Asian Violence-Provoking Speech" is accepted to ACL</li>
-          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received Honorable Mention at CHI!</li>
+          <li>📄 <small>[May 2024]</small> Our work "A Community-Centric Perspective for Characterizing and Detecting Anti-Asian Violence-Provoking Speech" is accepted to ACL.</li>
+          <li>🏅 <small>[Apr 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" received <a target="_blank" rel="noopener noreferrer" href="https://programs.sigchi.org/chi/2023/program/content/95962">Best Paper Honorable Mention</a> at CHI!</li>
           <!-- <li>📄 <small>[Dec 2021]</small> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" is accepted to CSCW</li> --> 
           <!-- <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li> -->
           <!-- <li>📇 <small>[May 2021]</small> Starting my summer research internship at Mayo Clinic Department of AI and Informatics</li> -->
@@ -138,7 +138,7 @@
                 }
             </div>      
           </div>
-          🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25) Workshop on AI Applications in Public Health and Social Services</a>, American Public Health Association (APHA) Annual Meeting 2025</i><br>
+          🎤 <i>Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">International Conference on AI in Medicine (AIME'25)</a> Workshop on AI Applications in Public Health and Social Services, <a target="_blank" rel="noopener noreferrer" href="https://apha.confex.com/apha/2025/meetingapp.cgi/Session/75396">American Public Health Association (APHA) Annual Meeting 2025</a> AJPH curated session Ethical Use of AI in Public Health</i><br>
           <img src="assets/img/llm_health.png" style="width:85%">
           <br>
           <a target="_blank" class="collapsible"><i class="fa-regular fa-square-caret-down"></i> Read Abstract</a>
@@ -187,7 +187,7 @@
 
 
 
-        <h2>PUBLICATIONS</h2>
+        <h2>SELECTED PUBLICATIONS</h2>
 
         <p class="pub">
           <small class="venue">CSCW'25</small> <strong class="project">A Risk Taxonomy and Reflection Tool for Large Language Model Adoption in Public Health</strong><br>
@@ -222,7 +222,7 @@
           <i>Proceedings of the AAAI/ACM Conference on AI, Ethics, and Society 2025.</i><br>
           <div>
             <a target="_blank" rel="noopener noreferrer" href="assets/aies25_ai_vertical_systems.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-            <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
+            <a target="_blank" rel="noopener noreferrer" href="https://ojs.aaai.org/index.php/AIES/article/view/36739">[<i class="fa fa-external-link-square"></i> DOI]</a>
             <a target="_blank" rel="noopener noreferrer" href="https://gaurav22verma.github.io/vertical-systems-with-large-ai-models">[<i class="fa fa-window-maximize"></i> Webpage]</a>
             <a target="_blank" class="collapsible">[<i class="fa fa-quote-left"></i> BIB]</a>
             <div class="bibcontent">
