--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
       <section>
         <h2>ABOUT ME</h2>
 
-        <p>I am a PhD Candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <b>the impacts of AI in information ecosystems and high-stakes health domains.</b> I adopt a theory-guided approach using both computational and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
+        <p>I am a PhD Candidate in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly focuses on <b>Human-AI Interaction, Social Computing, and Health & Wellbeing</b>, with an emphasis on <strong>helping people meaningfully engage with AI in complex information environments and health contexts</strong>. I adopt a theory-guided approach using both computational and qualitative methods to understand the role of technology in addressing or exacerbating problems in the information environment, public health, social interactions, and individual well-being. I am a member of the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
 
-        <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content (such as inaccurate or biased information) with high scalability and persuasiveness. I adopt a human-centered approach to understanding and contextualizing the perceived harms of using AI to meet informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
-
+        <p>While technology has democratized information access and authorship, it also presents unique challenges for individuals in assessing information quality and reliability. These challenges have become more pronounced with the emergence of Generative AI technologies like large language models (LLMs), which can produce low-quality content (such as inaccurate or biased information) with high scalability and persuasiveness. I adopt a human-centered approach to contextualizing and mitigating harms of using AI to meet health informational needs. Specifically, my research explores both the risks associated with utilizing AI’s generative abilities for informational needs and the broader public discourse and perceptions surrounding them.
 
         <p>My research has been published at premier computing venues, such as CHI, CSCW, and ACL, and has been recognized by paper awards at CHI and CSCW and the Foley Scholar Award (Georgia Tech highest award for study excellence in research contributions to computing).</p>
 
@@ -58,9 +57,10 @@
         <h2>RECENT NEWS</h2>
         <!-- 📄📍📇🎤🚩📹✈️ -->
         <ul class="scrollable-section">
+          <!-- <li>📄 <small>[Jan 2026]</small> Our paper "AI as We Describe It: How Large Language Models and Their Applications in Health are Represented Across Channels of Public Discourse" is accepted to CHI'26. See you in Barcelona☀️</li> -->
           <li>🎤 <small>[Nov 2025]</small> Invited panelist @ <a target="_blank" rel="noopener noreferrer" href="https://apha.confex.com/apha/2025/meetingapp.cgi/Session/75396">APHA Annual Meeting</a> in DC.</li>
           <li>🎤 <small>[Oct 2025]</small> Presented 2 papers & 1 workshop work @ <a target="_blank" rel="noopener noreferrer" href="https://cscw.acm.org/2025/">CSCW</a> in Norway.</li>
-          <li>🏅 <small>[Oct 2025]</small> Our paper "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" received <a target="_blank" rel="noopener noreferrer" href="https://programs.sigchi.org/cscw/2025/program/content/213085">Best Paper & DEI Recognition</a>!</li>
+          <li>🏅 <small>[Oct 2025]</small> Our paper "Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness" received <a target="_blank" rel="noopener noreferrer" href="https://programs.sigchi.org/cscw/2025/program/content/213085">Best Paper</a> + DEI Recognition at CSCW!</li>
           <li>🚩 <small>[July 2025]</small> I passed my thesis proposal! Now I'm a PhD candidate:)</li>
           <li>📄 <small>[July 2025]</small> Two paper accepts! 1) "A Risk Taxonomy and Reflection Tool for LLM Adoption in Public Health" is accepted to CSCW'25, and 2) "A Framework for Situating Innovations, Opportunities, and Challenges in Advancing Vertical Systems with Large AI Models" is accepted to AIES'25.</li>
           <li>🎤 <small>[June 2025]</small> Invited talk @ <a target="_blank" rel="noopener noreferrer" href="https://hwutemple.github.io/AIME25WorkshopAIPHSS/">Conference on AI in Medicine (AIME'25).</a></li>
@@ -149,7 +149,7 @@
 
         <p class="pub">
           <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
-          🏅<strong class="award">Best Paper & DEI Recognition</strong><br>
+          🏅<strong class="award">Best Paper</strong> 🏅<strong class="award">DEI Recognition</strong><br>
           <b>Jiawei Zhou</b>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           <i>Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.</i><br>
           <div>
@@ -240,7 +240,7 @@
 
         <p class="pub">
           <small class="venue">CSCW'25</small> <strong class="project">Harm in Layers: Compositions of Misinformative Hate in Anti-Asian Speech and Impacts on Perceived Harmfulness</strong><br>
-          🏅<strong class="award">Best Paper & DEI Recognition</strong><br>
+          🏅<strong class="award">Best Paper</strong> 🏅<strong class="award">DEI Recognition</strong><br>
           <b>Jiawei Zhou</b>, Gaurav Verma, Lei Zhang, Nicholas Chang, Munmun De Choudhury<br>
           <i>Proc. ACM Hum.-Comput. Interact. 9, 2, Article CSCW092 (April 2025), 22 pages.</i><br>
           <div>
